--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -17,7 +17,9 @@
                 Search
             </button>
         </form>
-        <p id="msg"></p>
+        <p id="line1"></p>
+        <p id="line2"></p>
+        <img src="" alt="" class="tempImg">
     </div>
     {{>footer}}
     <script src="/js/app.js"></script>
